fix:pattern name alignment

--- a/frontend/src/app/pages/game/verify-card-dialog/verify-card-dialog.component.scss
+++ b/frontend/src/app/pages/game/verify-card-dialog/verify-card-dialog.component.scss
@@ -1,5 +1,8 @@
 .formated-text {
-  white-space: pre-line;
+  white-space: pre-wrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 196px;
 }
 .verify-content {
   display: flex;
