--- a/frontend/src/app/sections/pattern-section/pattern-list-component/pattern-list-component.component.scss
+++ b/frontend/src/app/sections/pattern-section/pattern-list-component/pattern-list-component.component.scss
@@ -6,7 +6,7 @@ $accent-light: #9d4edd;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 200px;
+  max-width: 196px;
 }
 .pattern-section-title {
   color: $primary-color;
